--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -7,9 +7,7 @@
     width: 100vw;
   }
   .users_container {
-    background: linear-gradient(176deg, #3f3f3f, #141414);
     margin-top: 60px;
-    border-right: 4px solid #63abe9;
     overflow-y: auto;
   }
   .user_wrapper {
@@ -71,18 +69,20 @@
     position: absolute;
     bottom:0;
     left: 0%;
+    border-radius:5px;
     width: 100%;
     height: 62px;
     display: flex;
     justify-items: center;
     align-items: center;
-    background-color:#030202;
-    margin-bottom: -48px;
+    margin-bottom: -55px;
     margin-top:0px;
+    padding-top: 12px;
+    background: linear-gradient(176deg, #2b2b2b, #141414);
   }
   .message_form input {
-    width: 50vw;
-    margin: 0px 10px 10px 20px;
+    width: 57vw;
+    margin: 0px 10px 20px 40px;
     padding: 10px;
     border-radius: 3px;
     outline: none;
@@ -90,12 +90,12 @@
   }
   .message_form button {
     padding: 10px;
-    border-radius: 3px;
+    border-radius: 5px;
     margin-bottom: 10px;
     font-size: 22px;
   }
   .message_form input[type="text"]{
-    height:28px;
+    height:45px;
     margin-top: 15px;
     background-color: #fff;
     font-size: 25px;
@@ -110,9 +110,11 @@
     transform: translateY(-13px);
   }
   .message_form .btn {
-    margin-left: 20px;
+    margin-left: 0px;
   }
   .messages {
+    padding-left:15px;
+    padding-right:15px;
     background: linear-gradient(176deg, #3f3f3f, #141414);
     height: calc(100vh - 200px);
     overflow-y: auto;
