--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -1,56 +1,48 @@
-.navbar{
-  margin-bottom:60px;
-}
-.nav{
-  top:0;
-  width:100%;
-  height: 60px;
+.nav {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  position: fixed;
+  justify-content: space-between;
+  height: 60px;
+  padding-top:10px;
+  padding-right: 20px;
+  /* padding: 0px 50px 0px 50px; */
   box-shadow: 0 0 10px #000;
 }
-#chk1{
-  display: none; 
-}
-i{
-  color: var( --color-1);
-  cursor: pointer;
-}
-
 .logo a img{
-  height: 160px;
-  margin-left: 10px;
-  margin-right: 750px;
-  padding:2px;
+  width: 150px;
+  height: 100px;
+  padding:0px;
+  text-decoration: none;
+  margin-right: 20px;
 }
-
- button{
+.btn{
   border:none;
   background: linear-gradient(250deg, #1689ee, #ff29b4);
-  padding: 10px;
-  margin-top: -10px;
-  color:var( --color-1);
+  padding: 5px;
+  color:rgba(255, 255, 255, 0.781);
   border-radius: 3px;
-  font-weight:700;
+  font-weight:400;
   text-transform: capitalize;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
   outline:none;
+  font-size: 18px;
   cursor: pointer;
+  margin-bottom: 5px;
 }
-button:active{
+.btn:active{
   background:#2c58fe;
   transform: scale(0.995);
 }
-button:hover{
+.btn:hover{
   background:#2c58fe;
   transform: scale(0.995);
 }
 .nav ul {
-  flex:2;
+  padding: 5px;
+  flex:1;
   display: flex;
   justify-content: space-evenly;
+ 
 }
 .nav ul li{
   list-style: none;
@@ -61,26 +53,20 @@ button:hover{
   font-weight: 800;
   text-transform: uppercase;
   padding: 10px 15px;
+  transition: all 0.3s;
 }
 .nav ul li a:hover{
-  border-bottom: 2px solid cadetblue;
+  transform: scale(1.1);
+  transition: all 0.3s;
+  box-shadow: 0 1px 10px rgb(0, 0, 0);
 }
-@media(max-width:1000px){
+
+@media(max-width:500px){
   .logo a img{
-    margin-left: 20px;
-    margin-right: 80px;
+    width: 180px;
+    height: 120px;
+    padding:10px;
+    text-decoration: none;
+    margin-right: 20px;
   }
-  
 }
-@media(max-width:600px){
-  .logo a img{
-    height: 130px;
-    margin-left: -35px;
-    margin-right: 0px;
-    padding:0px;
-  }
-  .navbar{
-    top:0.5%;
-  }
-  
-} 
