--- a/src/pages/css/Profile.css
+++ b/src/pages/css/Profile.css
@@ -1,15 +1,21 @@
 
-.profile_container {
-    display: flex;
+  section{
+    width:90%;
+  }
+  .profile_container {
+    display: grid;
+    justify-items: center;
     align-items: center;
+    justify-content: center;
   }
   .img_container {
+    width: 100%;
     position: relative;
-    margin-right: 50px;
+    /* margin-right: 20px; */
   }
   .img_container img {
-    width: 180px;
-    height: 180px;
+    width: 280px;
+    height: 280px;
     border-radius: 50%;
     border: 1px solid var(--color-4);
     transition: 0.5s ease-in-out all;
@@ -30,21 +36,28 @@
     text-align: center;
   }
   .text_container {
+    width: 100%;
+    margin-top: -15px;
     flex-grow: 1;
+  padding-bottom: 5px;
   }
   .text_container h3 {
-    text-align: left;
-    font-size:30px;
-    margin-bottom:30px;
+    text-align: center;
+    font-size:40px;
+    margin-bottom:20px;
+    color:#000;
   }
   .text_container p{
-    text-align: left;
-    font-size:20px;
+    text-align: center;
+    font-size:25px;
+    color:#000;
     margin-bottom:30px;
   }
   .text_container small{
-    text-align: left;
-    font-size:15px;
+    text-align: center;
+    color:#000;
+    font-size:20px;
+    margin-left:20px;
     margin-bottom:30px;
   }
   @media screen and (max-width: 576px) {
@@ -78,7 +91,7 @@
       text-align: center;
       font-size:20px;
     }
-    .text_container p,hr{
+    .text_container p{
       text-align:center;
       font-size:18px;
     }
