--- a/src/pages/css/Profile.css
+++ b/src/pages/css/Profile.css
@@ -9,7 +9,6 @@
     justify-content: center;
   }
   .img_container {
-    width: 100%;
     position: relative;
     /* margin-right: 20px; */
   }
@@ -28,8 +27,9 @@
   }
   .overlay {
     transition: 0.5s ease;
+    justify-content: center;
     opacity: 0;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -57,6 +57,7 @@
     text-align: center;
     color:#000;
     font-size:20px;
+    margin-left: 30px;
     margin-bottom:30px;
   }
   @media screen and (max-width: 576px) {
