--- a/src/pages/css/Profile.css
+++ b/src/pages/css/Profile.css
@@ -29,7 +29,7 @@
     transition: 0.5s ease;
     justify-content: center;
     opacity: 0;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
